spooky-portfolio-basic

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Spooky Portfolio</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/screen.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1 class='hello-world'>Hello, World!</h1>
-  </body>
+    <body>
+      <div class="vert-space"></div>
+      <header class="top">
+        <div class="dracula">Dr. Acula's Portfolio</div>
+        <ul class="top-nav">
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Work</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+        <div class="top-button"> 
+          <button class="btn1"><a href="mailto:dracula@transylvania.com">Get in touch</a></button>
+        </div>  
+      </header>
+      <div class="vert-space"></d>
+        <div class="night-mode">
+          <p class="web-developer">I'm a <span class="red-text">web developer</span>, with a passion for night mode.
+          </p>
+        </div>
+      <div class="vert-space"></div>
+      <ul class="second-nav">
+          <li><a href="index.html" class="active">All</a></li>
+          <li><a href="web-design.html">Web Design</a></li>
+          <li><a href="digital-design.html">Digital Design</a></li>
+          <li><a href="3d-rendering.html">3D Rendering</a></li>
+          <li><a href="brand-identity.html">Brand Identity</a></li>
+      </ul>
+      <main class="portfolio-images">
+        <section class="image"><img src="media/skeleton.jpg" alt="skull"></section>
+        <section class="image"><img src="media/pumpkin.jpg" alt="pumpkin"></section>
+        <section class="image"><img src="media/red-door.jpg" alt="red door"></section>
+        <section class="image"><img src="media/jack-o-lanterns.jpg" alt="jack o lanterns"></section>
+        <section class="image"><img src="media/star-trooper.jpeg" alt="star wars trooper"></section>
+        <section class="image"><img src="media/pumpkin-bin.jpeg" alt="pumpkin bin"></section>
+        <section class="image"><img src="media/candles.jpeg" alt="candles"></section>
+        <section class="image"><img src="media/blue-pumpkin.jpeg" alt="pumpkin"></section>
+      </main>
+      <p>Let's work together</p>
+      <div class="bottom-button"> 
+      <button class="btn2"><a href="mailto:dracula@transylvania.com">Get in touch</a></button>
+      </div>
+      <div class="vert-space"></div>
+    </body>
 </html>
